<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myred"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin" >

    <Button
        android:id="@+id/orders"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:background="@drawable/ordersbutton"
        android:gravity="bottom|center"
        android:minWidth="80dp"
        android:onClick="select"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:text="@string/new_orders"
        android:textColor="#6f6f71" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/closed"
        android:layout_marginTop="15dp"
        android:layout_marginRight="14dp"
        android:onClick="select"
        android:src="@drawable/settings" />

    <ImageView
        android:id="@+id/about"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/settings"
        android:layout_marginRight="15dp"
        android:onClick="select"
        android:layout_toLeftOf="@+id/settings"
        android:src="@drawable/about" />

    <Button
        android:id="@+id/closed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/ordersbutton"
        android:gravity="bottom|center"
        android:minWidth="80dp"
        android:onClick="select"
        android:paddingBottom="5dp"
        android:text="@string/closed_orders"
        android:textSize="12sp"
        android:textColor="#6f6f71" />

    <Button
        android:id="@+id/branches"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/orders"
        android:layout_alignLeft="@+id/orders"
        android:layout_marginBottom="20dp"
        android:background="@drawable/branhesbutton"
        android:gravity="bottom|center"
        android:onClick="select"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:text="@string/title_activity_branches"
        android:textColor="#6f6f71" />

    <Button
        android:id="@+id/users"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/closed"
        android:layout_alignRight="@+id/closed"
        android:layout_marginBottom="20dp"
        android:background="@drawable/usersbutton"
        android:gravity="bottom|center"
        android:onClick="select"
        android:paddingBottom="5dp"
        android:text="@string/title_activity_users"
        android:textColor="#6f6f71"
        android:textSize="12sp" />

    <Button
        android:id="@+id/assigned"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/orders"
        android:layout_below="@+id/orders"
        android:background="@drawable/ordersbutton"
        android:layout_marginTop="20dp"
        android:gravity="bottom|center"
        android:minWidth="80dp"
        android:onClick="select"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:text="@string/assigned_orders"
        android:textColor="#6f6f71" />

    <Button
        android:id="@+id/canceled"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/closed"
        android:layout_below="@+id/closed"
        android:background="@drawable/ordersbutton"
        android:gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:onClick="select"
        android:paddingBottom="5dp"
        android:text="@string/canceled_orders"
        android:textColor="#6f6f71" />

</RelativeLayout>