<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myred"  
    android:fillViewport="true"   
	android:paddingBottom="@dimen/activity_vertical_margin"    
	android:paddingLeft="@dimen/activity_horizontal_margin"    
	android:paddingRight="@dimen/activity_horizontal_margin"    
	android:paddingTop="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/myborder"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="?android:attr/actionBarSize"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/businessLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dip"
            style="@style/mytextview"
            android:text="@string/select_business" />

        <!-- Spinner Dropdown -->

        <Spinner
            android:id="@+id/businessSP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myspinner"
            android:layout_below="@+id/businessLabel"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip" />
        <!-- Spinner Dropdown -->

        <ImageButton
            android:id="@+id/addBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/businessSP"
            android:src="@drawable/add"
            android:background="@drawable/mybutton"
			android:textColor="#ffffff"
            android:onClick="add" />
        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addBusiness"
            android:padding="8dip"
            style="@style/mytextview"
            android:text="@string/select_country" />

        <Spinner
            android:id="@+id/countriesSP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryLabel"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/myspinner"
            android:entries="@array/acc_type" />

        <ImageButton
            android:id="@+id/addCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/countriesSP"
            android:src="@drawable/add"
            android:background="@drawable/mybutton"
			android:textColor="#ffffff"
            android:onClick="add" />

        <!-- Select Label -->

        <TextView
            android:id="@+id/citiesLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addCountry"
            android:padding="8dip"
            style="@style/mytextview"
            android:text="@string/select_city" />

        <!-- Spinner Dropdown -->

        <Spinner
            android:id="@+id/citiesSP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/citiesLabel"
            android:layout_marginLeft="8dip"
            android:background="@drawable/myspinner"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip" />

        <ImageButton
            android:id="@+id/addCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/citiesSP"
            android:src="@drawable/add"
            android:background="@drawable/mybutton"
			android:textColor="#ffffff"
            android:onClick="add" />
        <!-- Select Label -->

        <TextView
            android:id="@+id/areaLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addCity"
            android:padding="8dip"
            style="@style/mytextview"
            android:text="@string/select_area" />

        <!-- Spinner Dropdown -->

        <Spinner
            android:id="@+id/areasSP"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/areaLabel"
            android:layout_marginLeft="8dip"
            android:background="@drawable/myspinner"
            android:layout_marginRight="8dip"
            android:layout_marginTop="5dip" />

        <ImageButton
            android:id="@+id/addArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/areasSP"
            android:src="@drawable/add"
            android:background="@drawable/mybutton"
			android:textColor="#ffffff"
            android:onClick="add" />

        <Button
            android:id="@+id/select"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addArea"
            android:onClick="select"
            android:background="@drawable/mybutton"
			android:textColor="#ffffff"
            android:text="@string/select"/>
    </RelativeLayout>

</ScrollView>